<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/viw_actionbar_layout"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_2F2F2F"
        android:textSize="@dimen/sp_19"
        android:layout_marginTop="@dimen/dp_130"
        android:text="@string/txt_open_vip_code"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_2F2F2F"
        android:textSize="@dimen/sp_28"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/txt_scan_code_login"/>
    <ImageView
        android:layout_width="@dimen/dp_335"
        android:layout_height="@dimen/dp_335"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/dp_72"
        android:src="@mipmap/ic_vip_scan_login"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_47"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp_15"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_11"
        android:paddingRight="@dimen/dp_11"
        android:layout_marginBottom="@dimen/dp_80">
        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_21"
            android:src="@mipmap/ic_back"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:layout_marginLeft="@dimen/dp_4"
            android:text="@string/txt_back_home"/>
    </LinearLayout>
</LinearLayout>