<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_r5">
    <FrameLayout
        android:background="@drawable/shape_auth_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_36"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_authorize"
            android:textSize="@dimen/sp_18"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:scaleType="centerCrop"
            android:layout_gravity="right"
            android:src="@mipmap/ic_auth_delete"/>
    </FrameLayout>
    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_53"
        android:layout_marginLeft="@dimen/dp_30"
        android:textColor="@color/color_2F2F2F"
        android:textSize="@dimen/sp_14"
        android:text="@string/txt_account"/>
    <EditText
        android:id="@+id/et_account"
        android:layout_width="@dimen/dp_179"
        android:layout_height="@dimen/dp_36"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_account"
        android:hint="@string/txt_input_account"
        android:paddingLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_7"
        android:layout_marginLeft="@dimen/dp_20"
        android:singleLine="true"
        android:background="@drawable/shape_et_account"/>
    <TextView
        android:id="@+id/tv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_account"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_30"
        android:textColor="@color/color_2F2F2F"
        android:textSize="@dimen/sp_14"
        android:text="@string/txt_password"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/dp_179"
        android:layout_height="@dimen/dp_36"
        android:hint="@string/txt_input_password"
        android:paddingLeft="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pwd"
        android:layout_marginTop="@dimen/dp_7"
        android:layout_marginLeft="@dimen/dp_20"
        android:inputType="numberPassword"
        android:singleLine="true"
        android:background="@drawable/shape_et_account"/>

    <com.transpos.sale.view.RoundButton
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_74"
        android:layout_height="@dimen/dp_36"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_24"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_23"
        app:btnCornerRadius="@dimen/dp_4"
        app:btn_is_gradient="true"
        app:btn_gradient_orientation="left_right"
        app:btn_gradient_colors="#00BBFF,#0082FF"
        android:text="登录"/>
    <com.transpos.sale.view.RoundButton
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/dp_74"
        android:layout_height="@dimen/dp_36"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintLeft_toRightOf="@+id/btn_login"
        android:layout_marginTop="@dimen/dp_24"
        android:textColor="@color/color_9B9B9B"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_24"
        app:btnCornerRadius="@dimen/dp_4"
        app:btn_normalSolidColor="@color/color_DFE1E5"
        android:text="取消"/>
    <com.transpos.sale.view.AuthKeyboardView
        android:id="@+id/input_keyboard"
        android:layout_width="@dimen/dp_243"
        android:layout_height="@dimen/dp_202"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_51"/>
</android.support.constraint.ConstraintLayout>