<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/viw_actionbar_layout"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_265">
        <LinearLayout
            android:id="@+id/ll_set"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_110"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/dp_23"
                android:layout_height="@dimen/dp_23"
                android:src="@mipmap/ic_setting"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/txt_set"
                android:layout_marginLeft="@dimen/dp_9"
                android:textSize="@dimen/sp_19"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_quit"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_110"
            android:layout_marginLeft="@dimen/dp_43"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp_23"
                android:layout_height="@dimen/dp_23"
                android:src="@mipmap/ic_quit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/txt_quit"
                android:layout_marginLeft="@dimen/dp_9"
                android:textSize="@dimen/sp_19"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_47"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_119"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_11"
        android:paddingRight="@dimen/dp_11">
        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_21"
            android:src="@mipmap/ic_back"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:layout_marginLeft="@dimen/dp_4"
            android:text="@string/txt_back_home"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>